#6 日本語部分を英語に
--HG--
branch : t6

--- a/hgwebcommit/templates/submit.html
+++ b/hgwebcommit/templates/submit.html
@@ -23,7 +23,7 @@
   {% endif %}
   <div class="operation">
     <input type="submit" value="OK" />
-    <button type="button" class="button-cancel">キャンセル</button>
+    <button type="button" class="button-cancel">Cancel</button>
   </div>
 </form>
 {% endblock %}
