--- a/hgwebcommit/templates/add_unknown_confirm.html
+++ b/hgwebcommit/templates/add_unknown_confirm.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <p>
-以下のファイルを管理対象に追加します:
+These files are added to the repository:
 </p>
 <ul>
   {% for filename in form.data.files %}
@@ -17,7 +17,7 @@
   </div>
   <div class="operation">
     <input type="submit" value="OK" />
-    <button type="button" class="button-cancel">キャンセル</button>
+    <button type="button" class="button-cancel">Cancel</button>
   </div>
 </form>
 {% endblock %}
