--- a/hgwebcommit/templates/base_site.html
+++ b/hgwebcommit/templates/base_site.html
@@ -3,5 +3,5 @@
 {% block title %}{{ repository.name }} - hgwebcommit{% endblock %}
 
 {% block header %}
-<h1><a href="{{ url_for('index') }}">リポジトリ: {{ repository.path }}</a></h1>
+<h1><a href="{{ url_for('index') }}">Repository: {{ repository.path }}</a></h1>
 {% endblock %}
