--- a/hgwebcommit/templates/index.html
+++ b/hgwebcommit/templates/index.html
@@ -4,18 +4,18 @@
 <div id="sidebar">
   <div id="repository-meta" class="sidebar-panel">
     <table>
-      <caption>Repository status</caption>
+      <caption>{{ gettext('Repository status') }}</caption>
       <tbody>
         <tr>
-          <th>branch</th>
+          <th>{{ gettext('branch') }}</th>
           <td>{{ repository.branch() }}</td>
         </tr>
         <tr>
-          <th>revision</th>
+          <th>{{ gettext('revision') }}</th>
           <td>{{ repository.parent_number() }}: {{ repository.parent_revision() }}</td>
         </tr>
         <tr>
-          <th>timestamp</th>
+          <th>{{ gettext('timestamp') }}</th>
           <td>{{ repository.parent_date() }}</td>
         </tr>
       </tbody>
@@ -23,7 +23,7 @@
   </div>
   {% if form_actions.action.choices %}
     <div id="action-form" class="sidebar-panel">
-      <h3>run action</h3>
+      <h3>{{ gettext('run action') }}</h3>
       <form method="post" action="{{ url_for('exec_action') }}" id="formactions">
         {{ form_actions.csrf_token }}
         <div>
@@ -47,20 +47,20 @@
   {% endif %}
 {% endwith %}
 
-<h2>Changes in tracked files</h2>
+<h2>{{ gettext('Changes in tracked files') }}</h2>
 <div class="status-help">
   <ul>
     <li>
-      <span class="status-mark status-modified">M</span>Modified
+      <span class="status-mark status-modified">M</span>{{ gettext('Modified') }}
     </li>
     <li>
-      <span class="status-mark status-added">A</span>Added
+      <span class="status-mark status-added">A</span>{{ gettext('Added') }}
     </li>
     <li>
-      <span class="status-mark status-removed">R</span>Removed
+      <span class="status-mark status-removed">R</span>{{ gettext('Removed') }}
     </li>
     <li>
-      <span class="status-mark status-missing">!</span>Missing
+      <span class="status-mark status-missing">!</span>{{ gettext('Missing') }}
     </li>
   </ul>
 </div>
@@ -72,21 +72,21 @@
     </div>
     <div class="operation">
       <input type="hidden" name="{{ form_ctrl._prefix }}operation" value="" id="formctrl-operation" />
-      <button type="button" id="formctrl-commit">Commit</button>
-      <button type="button" id="formctrl-revert">Revert</button>
-      <button type="button" id="formctrl-remove">Remove</button>
+      <button type="button" id="formctrl-commit">{{ gettext('Commit') }}</button>
+      <button type="button" id="formctrl-revert">{{ gettext('Revert') }}</button>
+      <button type="button" id="formctrl-remove">{{ gettext('Remove') }}</button>
     </div>
   </form>
 {% else %}
   <p>
-    There was no changes in tracked files.
+    {{ gettext('There was no changes in tracked files.') }}
   </p>
 {% endif %}
-<h2>Untracked files</h2>
+<h2>{{ gettext('Untracked files') }}</h2>
 <div class="status-help">
   <ul>
     <li>
-      <span class="status-mark status-not-tracked">?</span>Not tracked
+      <span class="status-mark status-not-tracked">?</span>{{ gettext('Not tracked') }}
     </li>
   </ul>
 </div>
@@ -97,12 +97,12 @@
       {{ form_unknown.files }}
     </div>
     <div class="operation">
-      <input type="submit" value="Add" />
+      <input type="submit" value="{{ gettext('Add') }}" />
     </div>
   </form>
 {% else %}
   <p>
-    There was no untracked files.
+    {{ gettext('There was no untracked files.') }}
   </p>
 {% endif %}
 {% endblock %}
