--- a/hgwebcommit/templates/submit.html
+++ b/hgwebcommit/templates/submit.html
@@ -22,8 +22,8 @@
     </div>
   {% endif %}
   <div class="operation">
-    <input type="submit" value="OK" />
-    <button type="button" class="button-cancel">Cancel</button>
+    <input type="submit" value="{{ gettext('OK') }}" />
+    <button type="button" class="button-cancel">{{ gettext('Cancel') }}</button>
   </div>
 </form>
 {% endblock %}
