actionの翻訳を更新

--- a/hgwebcommit/templates/index.html
+++ b/hgwebcommit/templates/index.html
@@ -28,7 +28,7 @@
         {{ form_actions.csrf_token }}
         <div>
           {{ form_actions.action }}
-          <input type="submit" value="Run" />
+          <input type="submit" value="{{ gettext('Run') }}" />
         </div>
       </form>
     </div>
