--- a/hgwebcommit/templates/base.html
+++ b/hgwebcommit/templates/base.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}" type="text/css" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/vnd.microsoft.icon" />
 </head>
 <body>
 <div id="wrap">
